--- a/web-server/public/index2.html
+++ b/web-server/public/index2.html
@@ -33,7 +33,7 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td><a href="https://example.com/resource/1">https://example.com/resource/1</a></td>
+                <td><a href="http://localhost:3000/resource/1">https://example.com/resource/1</a></td>
             </tr>
             <tr>
                 <td>2</td>
