--- a/web-server/public/index2.html
+++ b/web-server/public/index2.html
@@ -33,11 +33,11 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td><a href="http://localhost:3000/resource/1">https://example.com/resource/1</a></td>
+                <td><a href="http://localhost:3000/Patient">https://example.com/resource/1</a></td>
             </tr>
             <tr>
                 <td>2</td>
-                <td><a href="https://example.com/resource/2">https://example.com/resource/2</a></td>
+                <td><a href="http://127.0.0.1:3000/patientform">http://127.0.0.1:3000/patientform</a></td>
             </tr>
             <tr>
                 <td>3</td>
