--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Table with IDs and URLs</title>
+    <style>
+        table {
+            width: 50%;
+            border-collapse: collapse;
+            margin: 25px 0;
+            font-size: 18px;
+            text-align: left;
+        }
+        th, td {
+            padding: 12px;
+            border-bottom: 1px solid #ddd;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-    
+    <h2>Table with IDs and URLs</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>URL</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td><a href="http://localhost:3000/Patient">https://example.com/resource/1</a></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td><a href="http://127.0.0.1:3000/patientform">http://127.0.0.1:3000/patientform</a></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td><a href="https://example.com/resource/3">https://example.com/resource/3</a></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
