--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -23,6 +23,14 @@
 </head>
 <body>
     <h2>Table with IDs and URLs</h2>
+
+    <form action="/patientform">
+
+        <input type="text" name="PatientId" value="1">
+   
+
+            <input type="submit" value="Save">
+    </form>
     <table>
         <thead>
             <tr>
