--- a/jwt/index.html
+++ b/jwt/index.html
@@ -10,21 +10,13 @@
   <div id="content"></div>
 
   <script>
-    // Check if the token exists in the cookies
-    const token = getCookie('token');
-
-    if (token) {
-      // Send a request to a protected service using the token
-      fetch('/protected', {
-        method: 'GET',
-        headers: {
-          'Authorization': `Bearer ${token}`
-        }
-      })
+    // Send a request to a protected service
+    fetch('/protected')
       .then(response => {
         if (response.ok) {
           // If the response is successful, display the protected content
           response.json().then(data => {
+            
             document.getElementById('content').innerHTML = `<p>${data.message}</p>`;
           });
         } else {
@@ -36,17 +28,6 @@
         // Handle any errors
         document.getElementById('content').innerHTML = `<p>An error occurred: ${error}</p>`;
       });
-    } else {
-      // If token doesn't exist, redirect to login page
-      window.location.href = '/login';
-    }
-
-    // Function to get the value of a cookie by its name
-    function getCookie(name) {
-      const value = `; ${document.cookie}`;
-      const parts = value.split(`; ${name}=`);
-      if (parts.length === 2) return parts.pop().split(';').shift();
-    }
   </script>
 </body>
 </html>
