--- a/web-server/public/login.html
+++ b/web-server/public/login.html
@@ -14,7 +14,8 @@
     <input type="password" id="password" name="password" required><br><br>
     <button type="submit">Login</button>
   </form>
-
+  <p>Click the link below to go to the registration page:</p>
+  <a href="/static/register.html">Register</a>
   <script>
     document.getElementById('loginForm').addEventListener('submit', async (event) => {
       event.preventDefault();
