--- a/web-server/public/register.html
+++ b/web-server/public/register.html
@@ -61,11 +61,11 @@
     <form id="registrationForm">
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" value="a" required>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" value="a" required>
       </div>
       <div class="form-group">
         <button type="submit">Register</button>
@@ -73,7 +73,8 @@
       <div class="message" id="message"></div>
     </form>
   </div>
-
+  <p>Click the link below to go to the login page:</p>
+  <a href="/static/login.html">Register</a>
   <script>
     document.getElementById('registrationForm').addEventListener('submit', async (event) => {
       event.preventDefault();
