--- a/web-server/public/register.html
+++ b/web-server/public/register.html
@@ -72,9 +72,10 @@
       </div>
       <div class="message" id="message"></div>
     </form>
+    <p></p>
+    <a href="/static/login.html">Login</a>
+    
   </div>
-  <p>Click the link below to go to the login page:</p>
-  <a href="/static/login.html">Register</a>
   <script>
     document.getElementById('registrationForm').addEventListener('submit', async (event) => {
       event.preventDefault();
